feat: add e2e tests